# arxiv-cosci

./: .env.development  .env.example  .env.production  .env.staging  .gitignore  CONTRIBUTING.md  Dockerfile.api  Frontend Developer Guide.md  QUICKSTART.md  README.md  TESTING.md  WHAT_THIS_DOES.md  docker-compose.prod.yml  docker-compose.yml  frontend_architecture  package.json  pyproject.toml
.claude/: CLAUDE.md  architecture-analysis.md  plan.md
.github/workflows/: tests.yml
apps/: __init__.py
apps/api/: README.md  __init__.py  config.py  dependencies.py  main.py
apps/api/routers/: __init__.py  graph.py  health.py  ingestion.py  papers.py  predictions.py  search.py  system.py
apps/api/schemas/: __init__.py  graph.py  paper.py  search.py
apps/cli/: __init__.py  main.py
apps/web/: ARCHITECTURE.md  Dockerfile.prod  README.md  __init__.py  index.html  nginx.conf  package.json  tailwind.config.js
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/api/: client.ts  ingestion.ts
apps/web/src/components/: CitationGraph.tsx  Layout.tsx  ListView.tsx
apps/web/src/components/Graph/: GraphCanvas.tsx  Layouts.ts
apps/web/src/components/HUD/: CategoryFilters.tsx  Controls.tsx  Inspector.tsx  Omnibox.tsx  TimeBar.tsx  ViewToggle.tsx
apps/web/src/components/shared/: Button.tsx  GlassPanel.tsx
apps/web/src/hooks/: useGraphStore.ts
apps/web/src/pages/: Dashboard.tsx  GraphView.tsx  GraphViewV2.tsx  Home.tsx  PaperDetail.tsx  Search.tsx
apps/web/src/types/: api.ts
data/: paper_ids_to_fetch.txt  s2_papers_batch1.json  sample_papers.json
data/test_checkpoints/: checkpoint_1.json
docs/: DEPLOYMENT.md  GAP_ANALYSIS.md  PHASE6_SUMMARY.md  PHASE7_SUMMARY.md  PHASE8_SUMMARY.md  PHASE9_SUMMARY.md  STARTUP_CONSOLIDATION.md  TEST_RESULTS.md
k8s/: README.md  api-deployment.yaml  namespace.yaml  neo4j-statefulset.yaml  web-deployment.yaml
scripts/: batch_collect_and_process.py  cleanup_large_files.sh  convert_s2_to_parsed.py  start.sh  stop.sh  test-startup.sh
tests/: __init__.py  conftest.py  test_ai.py  test_api.py  test_batch_processor.py  test_cache_client.py  test_cli.py  test_conversion_script.py  test_e2e.py  test_gemini_client.py  test_ingestion.py  test_knowledge.py  test_ml_pipeline.py  test_parsing.py  test_s2_client.py  test_startup_integration.py
